<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
	android:orientation="vertical" >
	
	<TextView
       android:id="@+id/welcome"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/welcome_txt" />

    <Space android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TextView
        android:id="@+id/artikcloudDevInfoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/artikcloud_device_info_str"/>

    <Space android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <View style="@style/Divider"/>

    <Space android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <Button
        android:id="@+id/btnToGrabFlic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grab_flic_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:enabled="false"
        android:onClick="grabButton"/>

    <Space android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <TextView
        android:id="@+id/flicBtnInfoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flic_button_str"/>

    <Space android:layout_width="match_parent"
        android:layout_height="5dp"/>
    <View style="@style/Divider"/>

    <TextView
        android:id="@+id/postMsgView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sent_msg_str" />

    <Space android:layout_width="match_parent"
        android:layout_height="5dp"/>
    <View style="@style/Divider"/>

    <TextView
        android:id="@+id/sendmsg_response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/response_str" />
    
</LinearLayout>
